# hfworkspace

./: .gitignore  Cargo.toml  README_GEMMA.md  REQUIREMENT_SESSION_MGMT.md  gemma_color.py  gemma_search.py  gemma_simple.py  main.py  pyproject.toml  requirements_simple.txt  test_gemma.py
.github/workflows/: release-gemma-search.yml
scripts/: build-gemma-search.sh
src/: app.rs  event.rs  main.rs  models.rs  ui.rs
