[package]
name = "hf-tui"
version = "0.1.0"
edition = "2024"
description = "A colorful TUI to manage HuggingFace local models and chat with them"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
hf-hub = { version = "0.4", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
unicode-width = "0.2"
tokio-util = "0.7"
futures = "0.3"
anyhow = "1"
