[project]
name = "hfworkspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "ddgs>=8.1.1",
    "gradio>=6.18.0",
    "huggingface-hub[cli]>=1.19.0",
    "markdownify>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.12.0",
]
